--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,22 +1,59 @@
 .app{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    
-    .input-container {
-        width: 400px;
+
+    div {
         display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 50px;
+    }
+
+    .speaker-stack {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
+        .speaker-chip{
+            margin: 10px;
+            font-size: 30px;
+            background-color: transparent;
+        }
+        .current-speaker-chip{
+            margin: 60px;
+            font-size: 60px;
+            color: darkgoldenrod;
+            background-color: transparent;
+        }
+    }
+
+    .input {
+        width: 30%;
+        display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: center;
+
         button {
-            margin-left: 30px;
+            margin: 30px;
+            padding: 20px;
+            color: rgb(2, 41, 28);
+            background-color: cadetblue;
         } 
     }
-    .speaker-list { 
-        width: '100%';
-        text-align: center;
-        background-color: 'background.paper';
+
+    .current-speaker{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+
+        button {
+            margin: 30px;
+            padding: 20px;
+            color: rgb(2, 41, 28);
+            background-color: green;
+        }         
     }
+
 }
